@@ -1,6 +1,6 @@
 {
-  "timestamp" : "2022-04-07T00:36:18Z",
-  "count" : 7,
+  "timestamp" : "2022-04-20T16:09:58Z",
+  "count" : 2,
   "count_minmax" : [ 0, 7 ],
   "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 35,
