@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-20T08:10:22Z",
+  "timestamp" : "2022-04-20T16:09:58Z",
   "count" : 6,
   "count_minmax" : [ 6, 6 ],
   "count_prev_day_inc" : 6,
-  "count_prev_day_dec" : 0,
+  "count_prev_day_dec" : 5,
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_prev_day_inc" : 1,
