@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-04-20T08:10:22Z",
+  "timestamp" : "2022-04-20T16:09:58Z",
   "count_outdated" : 923,
   "uniques_outdated" : 51,
-  "count" : 1040,
+  "count" : 1035,
   "uniques" : 64,
   "views" : [
     {
       "timestamp": "2022-04-06T00:00:00Z",
-      "count": 7,
+      "count": 2,
       "count_minmax": [ 0, 7 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
