@@ -1,10 +1,10 @@
 {
-  "count": 117,
+  "count": 112,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-04-06T00:00:00Z",
-      "count": 7,
+      "count": 2,
       "uniques": 1
     },
     {
