@@ -1,3 +1,9 @@
+2022-04-20T16:09:58Z:
+* notice: last 14d: all unq: 112 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 923 51 / 1040 64
+* notice: next accum: outdated-all outdated-unq / all unq: 923 51 / 1035 64
+* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -5 // +1 +6 / -0 -5
+
 2022-04-20T08:10:22Z:
 * notice: last 14d: all unq: 117 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 923 51 / 1034 63
